@@ -556,6 +556,16 @@ class StructTest(unittest.TestCase):
         s = struct.Struct('i')
         s.__init__('ii')
 
+    def test_sizeof(self):
+        self.assertGreater(sys.getsizeof(struct.Struct('BHILfdspP')),
+                           sys.getsizeof(struct.Struct('B')))
+        self.assertGreaterEqual(sys.getsizeof(struct.Struct('123B')),
+                                sys.getsizeof(struct.Struct('B')))
+        self.assertGreaterEqual(sys.getsizeof(struct.Struct('B' * 123)),
+                                sys.getsizeof(struct.Struct('123B')))
+        self.assertGreaterEqual(sys.getsizeof(struct.Struct('123xB')),
+                                sys.getsizeof(struct.Struct('B')))
+
 def test_main():
     run_unittest(StructTest)
 
